# celeste.exposed

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml
pages/: 404.md  about.md  ads.md  alignment.md  copilot.md  dictator.md  happy.md  index.md  poll.md
scripts/: alignment.js  copilot.js  index.js  package-lock.json  package.json
src/: ban.rs  copilot.rs  main.rs  notify.rs  poll.rs
static/: embed.css  style.css
templates/: page.html.tera  poll.html.tera
