[package]
name = "c2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
bincode = "1.3.3"
comrak = "0.12.1"
dotenv = "0.15"
lazy_static = "1.4"
nanoid = "0.4"
redis = { version = "0.21.5", features = ["tls"] }
reqwest = "0.9"
rocket-client-addr = "0.5.2"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors" }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde = "1.0.136"
serde_json = "1.0.59"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "tls"]
